Fixed alignment with photography page:

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -450,6 +450,7 @@ $h3FontFamily:	'Quicksand', sans-serif;
 }
 
 .photographyImg {
-	// width: 100%;
+	margin: 0.5em 0;
 	max-width: 350px;
+	width: 100%;
 }
